# VoxClaw

./: .gitignore  README.md  README_zh.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows-nsis.yml  release-windows-nsis.yml
docs/superpowers/plans/: 2026-06-24-meeting-realtime-vad-pipeline.md
docs/superpowers/specs/: 2026-06-24-meeting-realtime-vad-pipeline-design.md
public/: indicator.html  indicator.html.bak
scripts/: sync-version.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: asr.rs  audio.rs  dictation.rs  http_client.rs  input_listener.rs  keyboard.rs  lib.rs  llm.rs  main.rs  skill_engine.rs  skills.rs  state.rs  storage.rs  window.rs
src-tauri/src/agent/: error.rs  history.rs  mod.rs  session.rs
src-tauri/src/agent/core/: context.rs  event.rs  message.rs  mod.rs  request.rs  usage.rs
src-tauri/src/agent/provider/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/agent/tool/: hooks.rs  mod.rs
src-tauri/src/agent/tool/builtin/: app.rs  bash.rs  clipboard.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  mod.rs  open_url.rs
src-tauri/src/asr/: mod.rs  volcengine.rs
src-tauri/src/asr/sensevoice/: decode.rs  download.rs  fbank.rs  mod.rs  model.rs  provider.rs  vad.rs
src-tauri/src/asr/zipformer/: download.rs  mod.rs  model.rs  provider.rs
src-tauri/src/commands/: agent.rs  audio.rs  config.rs  history.rs  llm.rs  meeting.rs  mod.rs  safety.rs  window.rs
src-tauri/src/meeting/: audio.rs  llm.rs  loopback.rs  mod.rs  pipeline.rs  session.rs
src/components/: AudioVisualizer.tsx  MeetingDetail.tsx  MeetingView.tsx  SessionBar.tsx  SettingsModal.tsx  StatusSection.tsx
src/lib/: api.ts
