[package]
name = "voxclaw"
version = "1.0.3"
description = "VoxClaw: The Next Gen AI Voice Assistant"
authors = ["GXJ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voxclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "socks"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input", "Win32_UI_WindowsAndMessaging", "Win32_Security"] }
arboard = "3.6.1"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tungstenite = "0.29.0"
flate2 = "1.1.9"
base64 = "0.22"
tokio-socks = "0.5.2"
url = "2"
async-trait = "0.1"
urlencoding = "2"
glob-match = "0.2"
regex = "1"
